<resources>
    <string name="app_name">CodePirates_FinalProject_MADT3125</string>
    <string name="registration_form">Registration Form</string>
    <string name="employee_first_name">Employee First Name</string>
    <string name="employee_last_name">Employee Last Name</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="employee_birth_year">Employee Birth Year</string>
    <string name="birth_year">birth year</string>
    <string name="employee_id">Employee ID</string>
    <string name="vehicle">Vehicle</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="side_car">Side Car</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="model">model</string>
    <string name="plate_number">Plate Number</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="register">Register</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="monthly_salary_hint">monthly salary</string>
    <string name="occupation_rate_hint">occupation rate</string>
    <string name="employee_type">Employee Type</string>
    <string name="employee_id_hint">employee id</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="occupation_rate">Occupation Rate</string>
</resources>